--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "author": "yangzhang",
   "license": "MIT",
   "dependencies": {
+    "chai": "^4.1.2",
+    "lodash": "^4.17.5",
+    "querystring": "^0.2.0",
     "urllib": "^2.25.4"
   },
   "devDependencies": {
