add message unit test

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "小程序客服消息node api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./test/unit/**.spec.js"
   },
   "keywords": [
     "小程序",
